--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
+
     <link rel="stylesheet" href="./css/styles.css">
+
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <nav>
         <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
@@ -18,7 +24,7 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="mailto:info@devstudio.com" class="mailto">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
@@ -94,7 +100,8 @@
           </li>
         </ul>
       </section>
-      <section>
+      <!-- section command -->
+      <section class="section-command">
         <h2 class="out-team">Наша команда</h2>
         <ul class="team">
           <li>
@@ -140,7 +147,8 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <!-- footer -->
+    <footer class="footer">
       <a href="./index.html"class="logo"><span class="logo1">Web</span>Studio</a>
       <address>
         <ul>
