--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="body">
     <header class="header">
         <nav>
             <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
@@ -18,17 +22,17 @@
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="mailto:info@devstudio.com" class="mailto">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
 <ul>
-    <li><button type="button">Усі</button></li>
-    <li><button type="button">Веб-сайти</button></li>
-    <li><button type="button">Додатки</button></li>
-    <li><button type="button">Дизайн</button></li>
-    <li><button type="button">Маркетинг</button></li>
+    <li><button type="button" class="button-portfolio">Усі</button></li>
+    <li><button type="button" class="button-portfolio">Веб-сайти</button></li>
+    <li><button type="button" class="button-portfolio">Додатки</button></li>
+    <li><button type="button" class="button-portfolio">Дизайн</button></li>
+    <li><button type="button" class="button-portfolio">Маркетинг</button></li>
 </ul>
 <ul>
     <li>
@@ -98,8 +102,8 @@
     </li>
 </ul>
     </main>
-   
-    <footer>
+   <!-- footer -->
+    <footer class="footer">
         <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
         <address>
             <ul>
