fix and comment

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   </head>
   <body class="body">
+    <!-- header -->
     <header class="header">
       <nav>
         <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
@@ -28,7 +29,9 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!-- main -->
     <main>
+      <!-- section hero -->
       <section class="section-hero">
         <h1 class="h1">
           Ефективні рішення для <br />
@@ -36,6 +39,7 @@
         </h1>
         <button class="button-hero">Замовити послугу</button>
       </section>
+      <!-- respect to details, punctualness, planning, modern tecnologies -->
       <section>
         <!-- <h2>
             УВАГА ДО ДЕТАЛЕЙ,ПУНКТУАЛЬНІСТЬ,ПЛАНУВАННЯ,СУЧАСНІ ТЕХНОЛОГІЇ
@@ -71,6 +75,7 @@
           </li>
         </ul>
       </section>
+      <!-- what are we doing -->
       <section>
         <h2 class="what-are-we-doing">Чим ми займаємося</h2>
         <ul>
@@ -158,7 +163,5 @@
         </ul>
       </address>
     </footer>
-    <ul></ul>
-    <ul></ul>
   </body>
 </html>
