--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="body">
+    <!-- header -->
     <header class="header">
         <nav>
             <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
@@ -26,6 +27,7 @@
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    <!-- main -->
     <main>
 <ul>
     <li><button type="button" class="button-portfolio">Усі</button></li>
