--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <header class="header">
       <nav>
         <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
-        <ul>
+        <ul class="list">
           <li><a href="./portfolio.html" class="studio">Студія</a></li>
           <li><a href="" class="link">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li><a href="mailto:info@devstudio.com" class="mailto">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <!-- main -->
@@ -45,7 +45,7 @@
             УВАГА ДО ДЕТАЛЕЙ,ПУНКТУАЛЬНІСТЬ,ПЛАНУВАННЯ,СУЧАСНІ ТЕХНОЛОГІЇ
         </h2> -->
 
-        <ul class="attention-to-detail">
+        <ul class="attention-to-detail list">
           <li>
             <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="text">
@@ -77,8 +77,8 @@
       </section>
       <!-- what are we doing -->
       <section>
-        <h2 class="what-are-we-doing">Чим ми займаємося</h2>
-        <ul>
+        <h2 class="h2">Чим ми займаємося</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/layout-on-a-tablet.jpg"
@@ -107,8 +107,8 @@
       </section>
       <!-- section command -->
       <section class="section-command">
-        <h2 class="out-team">Наша команда</h2>
-        <ul class="team">
+        <h2 class="h2">Наша команда</h2>
+        <ul class="team list">
           <li>
             <img
               src="./images/igor-demyanko.jpg"
@@ -116,8 +116,8 @@
               width="270"
               height="260"
             />
-            <h3 class="title">Ігор Дем'яненко</h3>
-            <p class="text">Product Designer</p>
+            <h3 class="h3">Ігор Дем'яненко</h3>
+            <p class="pozicion">Product Designer</p>
           </li>
           <li>
             <img
@@ -126,8 +126,8 @@
               width="270"
               height="260"
             />
-            <h3 class="title">Ольга Рєпіна</h3>
-            <p class="text">Frontend Developer</p>
+            <h3 class="h3">Ольга Рєпіна</h3>
+            <p class="pozicion">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -136,8 +136,8 @@
               width="270"
               height="260"
             />
-            <h3 class="title">Микола Тарасов</h3>
-            <p class="text">Marketing</p>
+            <h3 class="h3">Микола Тарасов</h3>
+            <p class="pozicion">Marketing</p>
           </li>
           <li>
             <img
@@ -146,8 +146,8 @@
               width="270"
               height="260"
             />
-            <h3 class="title">Михайло Єрмаков</h3>
-            <p class="text">UI Designer</p>
+            <h3 class="h3">Михайло Єрмаков</h3>
+            <p class="pozicion">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -156,7 +156,7 @@
     <footer class="footer">
       <a href="./index.html"class="logo"><span class="logo1">Web</span>Studio</a>
       <address>
-        <ul>
+        <ul class="list">
           <li class="adress-town">м. Київ, пр-т Лесі Українки, 26</li>
           <li><a href="mailto:evstudio.coinfo@dm" class="mail-tel">evstudio.coinfo@dm</a></li>
           <li><a href="tel:+380961111111" class="mail-tel">+38 096 111 11 11</a></li>
