--- a/portfolio.html
+++ b/portfolio.html
@@ -16,27 +16,27 @@
     <header class="header">
         <nav>
             <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
-            <ul>
+            <ul class="list">
                 <li><a href="./portfolio.html" class="studio">Студія</a></li>
                 <li><a href="./index.html" class="link">Портфоліо</a></li>
                 <li><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="list">
             <li><a href="mailto:info@devstudio.com" class="mailto">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
-    <!-- main -->
+    <!-- main portfolio -->
     <main>
-<ul>
+<ul class="list">
     <li><button type="button" class="button-portfolio">Усі</button></li>
     <li><button type="button" class="button-portfolio">Веб-сайти</button></li>
     <li><button type="button" class="button-portfolio">Додатки</button></li>
     <li><button type="button" class="button-portfolio">Дизайн</button></li>
     <li><button type="button" class="button-portfolio">Маркетинг</button></li>
 </ul>
-<ul>
+<ul class="list">
     <li>
         <img src="./images/notebook-with-website.jpg" 
                 alt="notebook-with-website" 
@@ -108,7 +108,7 @@
     <footer class="footer">
         <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
         <address>
-            <ul>
+            <ul class="list">
                 <li class="adress-town">м. Київ, пр-т Лесі Українки, 26</li>
                 <li><a href="mailto:evstudio.coinfo@dm" class="mail-tel">evstudio.coinfo@dm</a></li>
                 <li><a href="tel:+380961111111" class="mail-tel">+38 096 111 11 11</a></li>
