--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
 </ul>
     </main>
    <!-- footer -->
-    <footer class="footer">
+    <footer>
         <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
         <address>
             <ul class="list">
