head h1-hero button-hero

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <nav>
         <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
         <ul class="list">
-          <li><a href="./portfolio.html" class="studio">Студія</a></li>
-          <li><a href="" class="link">Портфоліо</a></li>
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
@@ -33,11 +33,11 @@
     <main>
       <!-- section hero -->
       <section class="section-hero">
-        <h1 class="h1">
+        <h1 class="h1-hero">
           Ефективні рішення для <br />
           вашого бізнесу <br />
         </h1>
-        <button class="button-hero">Замовити послугу</button>
+        <button class="button-hero"><span class="text-button-hero">Замовити послугу</span></button>
       </section>
       <!-- respect to details, punctualness, planning, modern tecnologies -->
       <section>
