--- a/portfolio.html
+++ b/portfolio.html
@@ -13,20 +13,20 @@
 </head>
 <body class="body">
     <!-- header -->
-    <header class="header">
-        <nav>
-            <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
-            <ul class="list">
-                <li><a href="./portfolio.html" class="studio">Студія</a></li>
-                <li><a href="./index.html" class="link">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
-            </ul>
-        </nav>
+<header class="header">
+    <nav>
+        <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
         <ul class="list">
-            <li><a href="mailto:info@devstudio.com" class="mailto">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="./index.html" class="link">Студія</a></li>
+            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="" class="link">Контакти</a></li>
         </ul>
-    </header>
+    </nav>
+    <ul class="list">
+        <li><a href="mailto:info@devstudio.com" class="mailto">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+    </ul>
+</header>
     <!-- main portfolio -->
     <main>
 <ul class="list">
@@ -105,7 +105,7 @@
 </ul>
     </main>
    <!-- footer -->
-    <footer>
+    <footer class="footer">
         <a href="./index.html" class="logo"><span class="logo1">Web</span>Studio</a>
         <address>
             <ul class="list">
